--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+
   input[type='number']::-webkit-inner-spin-button,
   input[type='number']::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
   }
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
 }
